--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,9 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"branchPrefix": "chore/renovate_",
+	"commitBodyTable": true,
 	"commitMessageAction": "Bump",
+	"commitMessageTopic": "{{depName}}",
 	"dependencyDashboard": true,
 	"dependencyDashboardAutoclose": true,
 	"dependencyDashboardLabels": ["neverstale", "dependencies"],
@@ -30,9 +33,11 @@
 			"matchPackagePrefixes": ["@typescript-eslint/"]
 		}
 	],
+	"platformAutomerge": true,
 	"prCreation": "not-pending",
 	"prNotPendingHours": 1,
 	"rangeStrategy": "auto",
+	"semanticCommits": "enabled",
 	"stabilityDays": 7,
 	"timezone": "Europe/Berlin"
 }
