--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,6 +9,18 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
+    pr_name:
+        name: Conventions
+        runs-on: ubuntu-latest
+        timeout-minutes: 10
+        steps:
+            - name: Branch Name
+              uses: deepakputhraya/action-branch-name@v1.0.0
+              with:
+                  regex: '([a-z])+\/([a-zA-Z0-9_.\-])+'
+                  allowed_prefixes: build,chore,ci,docs,feat,fix,perf,refactor,style,test
+                  ignore: trunk
+                  min_length: 5
     pr_tbd:
         name: Trunk-Based Development™
         runs-on: ubuntu-latest
@@ -16,7 +28,7 @@ jobs:
         steps:
             - name: Get Information
               id: branch-info
-              uses: tj-actions/branch-names@v6.1
+              uses: tj-actions/branch-names@v6.4
             - name: Source Branch is not trunk
               if: steps.branch-info.outputs.head_ref_branch == 'trunk'
               run: exit 2
