--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"scripts": {
 		"build": "cross-env NODE_ENV=production run-s",
 		"check": "tsc --noEmit",
+		"coverage": "vitest run --coverage",
 		"cspell:individual": "cspell --dot",
 		"cspell:report": "npm run cspell:individual -- \"**\"",
 		"deploy": "wrangler publish",
@@ -48,13 +49,16 @@
 		"secretlint:individual": "secretlint --secretlintignore .gitignore",
 		"secretlint:report": "npm run secretlint:individual -- \".\"",
 		"start": "cross-env NODE_ENV=production run-s",
-		"test": "vitest"
+		"test": "vitest run",
+		"test:watch": "vitest"
 	},
 	"dependencies": {
 		"itty-router": "4.0.0-next.46"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "4.20230321.0",
+		"@commitlint/cli": "17.5.0",
+		"@commitlint/config-conventional": "17.4.4",
 		"@cspell/dict-de-de": "3.1.0",
 		"@secretlint/secretlint-rule-preset-recommend": "6.2.3",
 		"@types/eslint": "8.21.3",
@@ -83,6 +87,11 @@
 		"wrangler": "2.13.0"
 	},
 	"sideEffects": false,
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	},
 	"lint-staged": {
 		"*": [
 			"npm run prettier:individual",
