--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
         runs-on: ubuntu-latest
         timeout-minutes: 15
         steps:
+            - name: Checkout
+              uses: actions/checkout@v3.4.0
             - uses: ./.github/actions/ci_setup
             - name: Run Linters
               run: npm run lint
@@ -25,6 +27,8 @@ jobs:
         runs-on: ubuntu-latest
         timeout-minutes: 15
         steps:
+            - name: Checkout
+              uses: actions/checkout@v3.4.0
             - uses: ./.github/actions/ci_setup
             - name: Run TypeScript
               run: npm run check
@@ -36,6 +40,8 @@ jobs:
         runs-on: ubuntu-latest
         timeout-minutes: 15
         steps:
+            - name: Checkout
+              uses: actions/checkout@v3.4.0
             - uses: ./.github/actions/ci_setup
             - name: Run Tests
               run: npm test
