--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,6 +22,8 @@ jobs:
             name: Production
             url: ${{ steps.deploy.outputs.url }}
         steps:
+            - name: Checkout
+              uses: actions/checkout@v3.4.0
             - uses: ./.github/actions/ci_setup
             - name: Deploy
               id: deploy
