--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# cspell:disable
 # Created by https://www.toptal.com/developers/gitignore/api/git,node,macos,linux,dotenv,windows,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,node,macos,linux,dotenv,windows,visualstudiocode
 
