ci: update deprecated production output

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -44,4 +44,4 @@ jobs:
                       echo "❌ FAILED TO UPDATE HOOK"
                   fi
                   exec 3>&-
-                  echo "::set-output name=url::$URL"
+                  echo "url=$URL" >> $GITHUB_OUTPUT
