feat: add posthog (disabled)

--- a/package.json
+++ b/package.json
@@ -26,29 +26,27 @@
 	],
 	"main": "src/index.ts",
 	"scripts": {
-		"build": "cross-env NODE_ENV=production run-s",
 		"check": "tsc --noEmit",
 		"coverage": "vitest run --coverage",
 		"cspell:individual": "cspell --dot",
 		"cspell:report": "npm run cspell:individual -- \"**\"",
 		"deploy": "wrangler publish",
-		"dev": "cross-env NODE_ENV=development wrangler dev --local",
+		"dev": "wrangler dev --local",
 		"eslint:fix": "npm run eslint:template -- --fix .",
 		"eslint:individual": "npm run eslint:template -- --fix",
 		"eslint:report": "npm run eslint:template -- --max-warnings 0 .",
 		"eslint:template": "eslint --cache --report-unused-disable-directives --no-error-on-unmatched-pattern --ext .tsx,.ts,.jsx,.js,.mjs,.cjs --ignore-path .gitignore",
 		"fix": "run-s prettier:fix eslint:fix secretlint:report cspell:report",
 		"lint": "run-s prettier:report eslint:report secretlint:report cspell:report",
+		"postinstall": "patch-package",
 		"preinstall": "npx --yes only-allow npm",
 		"prepare": "husky install",
 		"prettier:fix": "npm run prettier:individual -- .",
 		"prettier:individual": "npm run prettier:template -- --write",
 		"prettier:report": "npm run prettier:template -- --check .",
 		"prettier:template": "prettier --plugin-search-dir=. --ignore-unknown --ignore-path .gitignore",
-		"prod": "cross-env NODE_ENV=production run-s build start",
 		"secretlint:individual": "secretlint --secretlintignore .gitignore",
 		"secretlint:report": "npm run secretlint:individual -- \".\"",
-		"start": "cross-env NODE_ENV=production run-s",
 		"test": "vitest run",
 		"test:watch": "vitest"
 	},
@@ -62,10 +60,8 @@
 		"@cspell/dict-de-de": "3.1.0",
 		"@secretlint/secretlint-rule-preset-recommend": "6.2.3",
 		"@types/eslint": "8.21.3",
-		"@types/node": "18.15.7",
 		"@typescript-eslint/eslint-plugin": "5.56.0",
 		"@typescript-eslint/parser": "5.56.0",
-		"cross-env": "7.0.3",
 		"cspell": "6.31.0",
 		"eslint": "8.36.0",
 		"eslint-config-airbnb-base": "15.0.0",
@@ -78,6 +74,7 @@
 		"lint-staged": "13.2.0",
 		"npm-run-all": "4.1.5",
 		"only-allow": "1.1.1",
+		"patch-package": "6.5.1",
 		"prettier": "2.8.7",
 		"prettier-plugin-pkg": "0.17.1",
 		"secretlint": "6.2.3",
